--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,8 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests --login.positive.spec.js
-      run: npx playwright test
+    - name: Run Playwright tests
+      run: npx playwright test --project=chromium --project=firefox
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
